benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/debug/bignums_Zeros_iter5_error.log
=== Verification Error - Iteration 5 ===
File: benchmarks/verus/bignum/files/bignums_Zeros.rs
Time: 2025-09-15 11:12:20

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0428]: the name `Str2Int` is defined multiple times
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignums_Zeros_impl.rs:23:6
   |
10 |   spec fn Str2Int(s: Seq<char>) -> nat
   |  ______-
11 | |   recommends ValidBitString(s)
12 | |   decreases s.len()
...  |
15 | | }
   | |_- previous definition of the value `Str2Int` here
...
23 |   spec fn Str2Int(s: Seq<char>) -> nat
   |  ______^
24 | |     requires ValidBitString(s)
25 | |     decreases s.len()
...  |
28 | | }
   | |_^ `Str2Int` redefined here
   |
   = note: `Str2Int` must be defined only once in the value namespace of this module

error[E0425]: cannot find function `lemma_str2int_allzero` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignums_Zeros_impl.rs:72:9
   |
72 |         lemma_str2int_allzero(vec@);
   |         ^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0425, E0428.
For more information about an error, try `rustc --explain E0425`.

--------------------------------------------------------------------------------

Additional Output:
error[E0428]: the name `Str2Int` is defined multiple times
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignums_Zeros_impl.rs:23:6
   |
10 |   spec fn Str2Int(s: Seq<char>) -> nat
   |  ______-
11 | |   recommends ValidBitString(s)
12 | |   decreases s.len()
...  |
15 | | }
   | |_- previous definition of the value `Str2Int` here
...
23 |   spec fn Str2Int(s: Seq<char>) -> nat
   |  ______^
24 | |     requires ValidBitString(s)
25 | |     decreases s.len()
...  |
28 | | }
   | |_^ `Str2Int` redefined here
   |
   = note: `Str2Int` must be defined only once in the value namespace of this module

error[E0425]: cannot find function `lemma_str2int_allzero` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignums_Zeros_impl.rs:72:9
   |
72 |         lemma_str2int_allzero(vec@);
   |         ^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0425, E0428.
For more information about an error, try `rustc --explain E0425`.
